// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`makeLoggable logs 1`] = `
Array [
  "13:13:13 COMPUTED StoreWithComputed.isDividedBy3 [object Object] -> true",
  "13:13:13 COMPUTED StoreWithoutLog.isEven [object Object] -> false",
  "13:13:13 COMPUTED StoreWithoutLog.isEven false -> true",
  "13:13:13 ACTION StoreWithComputed.increment ",
  "13:13:13 OBSERVABLE StoreWithComputed.value 0 -> 1",
  "13:13:13 COMPUTED StoreWithComputed.isDividedBy3 true -> false",
  "13:13:13 ACTION StoreOnlyObservables.init ",
]
`;

exports[`makeLoggable logs 2`] = `
Array [
  "13:13:13 COMPUTED StoreWithComputed.isDividedBy3 [object Object] -> true",
  "13:13:13 COMPUTED StoreWithoutLog.isEven [object Object] -> false",
  "13:13:13 COMPUTED StoreWithoutLog.isEven false -> true",
  "13:13:13 ACTION StoreWithComputed.increment ",
  "13:13:13 OBSERVABLE StoreWithComputed.value 0 -> 1",
  "13:13:13 COMPUTED StoreWithComputed.isDividedBy3 true -> false",
  "13:13:13 ACTION StoreOnlyObservables.init ",
  "13:13:13 ACTION StoreWithComputed.increment ",
  "13:13:13 OBSERVABLE StoreWithComputed.value 1 -> 2",
  "13:13:13 ACTION StoreWithComputed.increment ",
  "13:13:13 OBSERVABLE StoreWithComputed.value 2 -> 3",
  "13:13:13 COMPUTED StoreWithComputed.isDividedBy3 false -> true",
]
`;
